# nccl_allreduce_demo_without_mpi

./: CMakeLists.txt  README.md
src/: gpu_worker.cpp  gpu_worker.h  main.cpp  nccl_helper.h  tcp_socket.cpp  tcp_socket.h  thread_manager.h  utils.h
